[gd_scene load_steps=5 format=3 uid="uid://ijdtuw301di4"]

[ext_resource type="PackedScene" uid="uid://dbq4e7vqbsx5g" path="res://Scenes/UI/main_Menu.tscn" id="1_eya5l"]
[ext_resource type="Script" path="res://main.gd" id="1_vm4rc"]
[ext_resource type="PackedScene" uid="uid://cav8gkhohwn8w" path="res://Scenes/UI/pause_menu.tscn" id="3_u20ib"]

[sub_resource type="GDScript" id="GDScript_2upn6"]
script/source = "extends Control

signal PUASEGAME
signal RESUMEGAME
signal GOTOMAINMENU


"

[node name="root" type="Node2D"]
script = ExtResource("1_vm4rc")

[node name="mainMenu" parent="." instance=ExtResource("1_eya5l")]
offset_left = 10.0
offset_top = 37.0
offset_right = 10.0
offset_bottom = 37.0

[node name="PauseMenu" parent="." instance=ExtResource("3_u20ib")]
visible = false
offset_top = 219.0
offset_bottom = 219.0
script = SubResource("GDScript_2upn6")

[connection signal="QUITGAME" from="mainMenu" to="." method="_on_main_menu_quitgame"]
[connection signal="STARTGAME" from="mainMenu" to="." method="_on_main_menu_startgame"]
[connection signal="resized" from="mainMenu" to="." method="_on_main_menu_resized"]
[connection signal="RESUMEGAME" from="PauseMenu" to="." method="_on_pause_menu_resumegame"]
